@@ -4,11 +4,15 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.RandomAccessFile;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.nio.ByteBuffer;
 import java.nio.MappedByteBuffer;
 import java.nio.channels.FileChannel.MapMode;
 import java.util.Arrays;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 
 /**
@@ -106,14 +110,16 @@ public class MemoryMappedFileBitArray implements BitArray{
 
 	@Override
 	public void close() throws IOException{
-		closeDirectBuffer();
-		backingFile.close();
+		try(backingFile){
+			closeDirectBuffer();
+		}
 	}
 
 	/**
-	 * Method that helps unmap a memory-mapped file before being garbage-collected.
+	 * Method that 
 	 */
 	private void closeDirectBuffer(){
+		//helps unmap a memory-mapped file before being garbage-collected.
 		if(buffer != null && buffer.isDirect()){
 			//we could use this type cast and call functions without reflection code,
 			//but static import from sun.* package is risky for non–SUN virtual machine
@@ -121,14 +127,24 @@ public class MemoryMappedFileBitArray implements BitArray{
 			//	((sun.nio.ch.DirectBuffer)buffer).cleaner().clean();
 			//}
 			//catch(Exception e){ }
+//			try{
+//				Method cleaner = buffer.getClass().getMethod("cleaner");
+//				cleaner.setAccessible(true);
+//				Method clean = Class.forName("sun.misc.Cleaner").getMethod("clean");
+//				clean.setAccessible(true);
+//				clean.invoke(cleaner.invoke(buffer));
+//			}
+//			catch(ClassNotFoundException | IllegalAccessException | IllegalArgumentException | NoSuchMethodException | SecurityException | InvocationTargetException e){ }
 			try{
-				Method cleaner = buffer.getClass().getMethod("cleaner");
-				cleaner.setAccessible(true);
-				Method clean = Class.forName("sun.misc.Cleaner").getMethod("clean");
-				clean.setAccessible(true);
-				clean.invoke(cleaner.invoke(buffer));
+				sun.misc.Unsafe a;
+				Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+				Field unsafeField = unsafeClass.getDeclaredField("theUnsafe");
+				unsafeField.setAccessible(true);
+				Object unsafe = unsafeField.get(null);
+				Method invokeCleaner = unsafeClass.getMethod("invokeCleaner", ByteBuffer.class);
+				invokeCleaner.invoke(unsafe, buffer);
 			}
-			catch(ClassNotFoundException | IllegalAccessException | IllegalArgumentException | NoSuchMethodException | SecurityException | InvocationTargetException e){ }
+			catch(ClassNotFoundException | NoSuchFieldException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e){ }
 
 			buffer = null;
 		}
